# rust-learn

./: Cargo.toml
examples/: Cargo.toml
examples/src/: cli_with_clap.rs  simple_cli_with_log.rs
